# comby.js

./: .gitignore  Makefile  README.md  comby_js.opam  dune  index.js  package.json
js/: comby.min.js
lib/: dune
lib/language/: ast.ml  dune  omega_rule.ml  rule.mli  types.ml
lib/match/: dune  environment.ml  location.ml  match.mli  match_context.ml  range.ml  types.ml
lib/matchers/: dune  languages.ml  matchers.mli  omega.ml  omega_matchers.ml  parser.ml  types.ml
lib/parsers/: dune  omega_comments.ml  omega_string_literals.ml
lib/pipeline/: dune  pipeline.ml
lib/replacement/: dune  replacement.ml
lib/rewriter/: dune  rewrite.ml  rewrite_template.ml  rewriter.mli
lib/rule_language/: ast.ml  dune  languages.ml  languages.mli  matchers_types.ml  omega.ml  omega_matchers.ml  omega_parser.ml  omega_rule.ml  options.ml  parser.ml  rule.ml  types.ml
lib/server/: dune  server_types.ml
lib/statistics/: dune  statistics.ml  statistics.mli
server/: running.sh  server.js  x
src/: comby.ml  dune
test/: example-rewrite-rule.js  example-rewrite.js  example-solidity-rewrite.js  out  rewrite-go-big.js  rewrite-go.js  search-go-big.js  search-go-super-big.js  search-go.js  search-nested-go.js  search-nested.js  search-small.go  search10.go  search100.go  test.sh
